--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,87 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto+Slab:wght@300;700&display=swap');
+
+$pale-grey: #fafafa;
+$azure: #0290ff;
+$black: #121212;
+$white: #fff;
+$grey-border: #e8e8e8;
+// font-family: 'Roboto Slab', serif;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  background-color: $pale-grey;
+}
+
+.container {
+  max-width: 75rem;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: $white;
+  height: 5.938rem;
+  display: flex;
+  align-items: center;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo-nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.875rem;
+  font-weight: bold;
+  color: $azure;
+}
+
+.nav {
+  display: flex;
+  list-style: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.813rem;
+  letter-spacing: 1.9px;
+  color: $black;
+  opacity: 0.5;
+  margin-left: 2.563rem;
+}
+
+a.active {
+  font-weight: bold;
+  color: $black;
+  opacity: 1;
+}
+
+.user-box {
+  height: 2.813rem;
+  width: 2.813rem;
+  border: 1px solid $grey-border;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.user {
+  color: $azure;
+  height: 1.375rem;
+  width: 1.375rem;
 }
