--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@ $white: #fff;
 $grey-border: #e8e8e8;
 $cool-blue: #4386bf;
 $medium-blue: #307bbe;
+$warm-grey: #888;
+$very-light-pink: c4c4c4;
 
 * {
   margin: 0;
@@ -89,7 +91,9 @@ a.active {
 }
 
 .book-list {
-  margin: 2.375rem auto 1.562rem;
+  margin: 2.375rem auto 1.8rem;
+  padding-bottom: 1.562rem;
+  border-bottom: 2px solid $grey-border;
 }
 
 .book-card {
@@ -210,7 +214,8 @@ a.active {
   }
 }
 
-.progress-btn {
+.progress-btn,
+.submit-btn {
   font-family: 'Roboto Slab', serif;
   width: 11.5rem;
   letter-spacing: 0.5px;
@@ -218,6 +223,57 @@ a.active {
   border: none;
   color: $white;
   background-color: $azure;
-  border-radius: 4px;
+  border-radius: 3px;
   padding: 0.438rem 1.188rem 0.5rem 1.375rem;
+}
+
+.new-book {
+  font-size: 1.25rem;
+  color: $warm-grey;
+  text-transform: uppercase;
+  letter-spacing: -0.18px;
+  font-weight: bold;
+  margin-bottom: 1.188rem;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 5rem;
+}
+
+#title {
+  width: 55%;
+}
+
+#author {
+  width: 24%;
+}
+
+#title,
+#author {
+  border: 1px solid $grey-border;
+  padding: 0.813rem 1.063rem;
+  border-radius: 4px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.25rem;
+
+  &::placeholder {
+    font-size: 1rem;
+    letter-spacing: -0.15px;
+    color: $very-light-pink;
+    opacity: 0.5;
+  }
+
+  &:focus {
+    outline: 2px solid $cool-blue;
+    outline-offset: 1px;
+  }
+}
+
+.submit-btn {
+  text-transform: uppercase;
+  padding: 0.801rem 1.188rem 0.886rem 1.375rem;
+  font-weight: bold;
+  font-size: 0.813rem;
 }
