--- a/src/App.scss
+++ b/src/App.scss
@@ -215,7 +215,8 @@ a.active {
 }
 
 .progress-btn,
-.submit-btn {
+.submit-btn,
+.status-btn {
   font-family: 'Roboto Slab', serif;
   width: 11.5rem;
   letter-spacing: 0.5px;
@@ -271,9 +272,23 @@ form {
   }
 }
 
-.submit-btn {
+.submit-btn,
+.status-btn {
   text-transform: uppercase;
   padding: 0.801rem 1.188rem 0.886rem 1.375rem;
   font-weight: bold;
   font-size: 0.813rem;
+}
+
+.category-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 80vh;
+}
+
+.cat-caption {
+  font-size: 1.75rem;
+  margin-bottom: 5rem;
 }
